--- a/services/test/public/index.html
+++ b/services/test/public/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="Web site created using create-react-app" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -26,7 +24,27 @@
     -->
     <title>React App</title>
   </head>
+
   <body>
+    <script>
+      const isDarkMode = window.matchMedia('(prefers-color-scheme: dark)').matches;
+
+      if (isDarkMode) {
+        document.body.classList.add('theme-dark');
+      }
+
+      const mediaQueryList = window.matchMedia('(prefers-color-scheme: dark)');
+
+      mediaQueryList.addEventListener('change', (e) => {
+        const isDarkMode = e.matches;
+
+        if (isDarkMode) {
+          document.body.classList.add('theme-dark');
+        } else {
+          document.body.classList.remove('theme-dark');
+        }
+      });
+    </script>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
@@ -40,4 +58,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+
 </html>
